--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+}
 .App-header {
   min-height: 100vh;
+}
+.loader {
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
+  width: 100%;
 }
