--- a/src/view/Company/company.css
+++ b/src/view/Company/company.css
@@ -1,13 +1,41 @@
 .companyWrapper {
-    background-color: #213769;
-        height: 100vh;
-    width: 100%;
-    color: white;
-  }
-  .companyContent{
-      margin: 0 auto;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-  }
+  background-color: #213769;
+  width: 100%;
+  color: white;
+  height: 100vh;
+}
+.companyContent {
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -30%);
+  width: 50%;
+}
+.buttonWrapper {
+  /* margin: 0 auto;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center; */
+}
+
+.companyList {
+  display: flex;
+  justify-content: space-between;
+  margin: 5px;
+  background-color: #4997d0;
+  padding: 10px 15px;
+}
+
+.floatBtn {
+  position: fixed;
+  width: 60px;
+  height: 60px;
+  bottom: 40px;
+  right: 40px;
+  color: #fff;
+  font-size: 20px;
+  outline: none !important;
+  border-radius: 50px;
+  text-align: center;
+}
