--- a/src/component/CompanyDetail/companyDetails.css
+++ b/src/component/CompanyDetail/companyDetails.css
@@ -15,14 +15,15 @@
   justify-content: space-between;
 }
 .cardWrapper {
-  width: 500px;
+  width: 50vw;
+  height: max-content;
   padding: 20px;
   background-color: white;
   text-align: center !important;
   color: black;
-  -webkit-box-shadow: 10px 10px 5px 2px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 10px 10px 5px 2px rgba(0, 0, 0, 0.75);
-  box-shadow: 10px 10px 5px 2px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: 8px 8px 5px 2px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 8px 8px 5px 2px rgba(0, 0, 0, 0.75);
+  box-shadow: 8px 8px 5px 2px rgba(0, 0, 0, 0.75);
 }
 .customLine {
   border-left: 2px solid #14baf6;
@@ -38,12 +39,14 @@
   outline: none !important;
   border: 0px;
   border-bottom: 1px solid black;
+  width: 80%;
 }
 .addTokenBtn {
   outline: none !important;
   padding: 10px;
   background-color: #7ed4e6;
   border: 0px !important;
+  display: block;
 }
 .contentWrapper {
   padding: 0px 10px;
